[Tickets: 18642] Added ZeroClipboard library and enabled copy to clipboard support for external links. Changed wiki article name input class to better match other bootstrap fields. Fixed revision history bug on new article click event. Fix revision history table alignment with save button.
git-svn-id: https://teamsupport.svn.beanstalkapp.com/main/trunk@2400 02885c34-e171-44ab-8435-42fb7a3c3aaf

--- a/WebApp/Resources/Css/editor.css
+++ b/WebApp/Resources/Css/editor.css
@@ -1,5 +1,5 @@
 ﻿
-
+tinymce {height:500px;}
 :focus { -moz-outline-style: none; outline:0; }
 
 body { font-size: 12px; margin:0; padding-left: 5px !important; padding-top:5px !important; }
